--- a/src/main/resources/assets/wind-charged-weaponry/lang/en_us.json
+++ b/src/main/resources/assets/wind-charged-weaponry/lang/en_us.json
@@ -1,4 +1,10 @@
 {
+  "itemgroup.wind_weaponry.wind_items": "Wind Charged",
+
   "item.wind-charged-weaponry.wind_hammer": "Heavy Hammer",
-  "item.wind-charged-weaponry.wind_gaunlet": "Wind Gaunlet"
+  "item.wind-charged-weaponry.wind_gaunlet": "Wind Gaunlet",
+  "item.wind-charged-weaponry.wind_longsword": "Wind Longsword",
+
+  "tooltip.wind-charged-weaponry.longsword.shift_down" : "A faithful replica of a ceremonial weapon from a bygone era. Its blade is formed from sharpened breeze rods.",
+  "tooltip.wind-charged-weaponry.longsword" : "Press §e[Shift]§r for more information!"
 }
