--- a/src/main/resources/assets/wind-charged-weaponry/lang/en_us.json
+++ b/src/main/resources/assets/wind-charged-weaponry/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.wind-charged-weaponry.wind_gauntlet": "Wind Gauntlet",
   "item.wind-charged-weaponry.wind_longsword": "Ceremonial Longsword",
   "item.wind-charged-weaponry.needle": "Needle",
+  "block.wind-charged-weaponry.tornado_generator": "Cyclone Generator",
 
   "tooltip.wind-charged-weaponry.longsword.shift_down" : "A faithful replica of a ceremonial weapon from a bygone era. Its blade is formed from sharpened breeze rods.",
   "tooltip.wind-charged-weaponry.longsword.ctrl_down" : "§eRight Click§r to block. Deals less damage when holding an offhand item. Incompatible with a shield.",
